--- a/templates/index.html
+++ b/templates/index.html
@@ -10,18 +10,16 @@
       project-id="chatbots-305505"
       agent-id="662e8628-0809-4a8c-af55-943e3b7e1d76"
       language-code="en">
-      <df-messenger-chat
+      <df-messenger-chat-bubble
        chat-title="Keashan">
-      </df-messenger-chat>
+      </df-messenger-chat-bubble>
     </df-messenger>
     <style>
       df-messenger {
         z-index: 999;
         position: fixed;
-        bottom: 0;
-        right: 0;
-        top: 0;
-        width: 350px;
+        bottom: 16px;
+        right: 16px;
       }
     </style>
     <title>Fruit Image Description</title>
