--- a/templates/index.html
+++ b/templates/index.html
@@ -1,95 +1,39 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
-    <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
-    <df-messenger
-      project-id="chatbots-305505"
-      agent-id="662e8628-0809-4a8c-af55-943e3b7e1d76"
-      language-code="en">
-      <df-messenger-chat-bubble
-       chat-title="Keashan">
-      </df-messenger-chat-bubble>
-    </df-messenger>
-    <style>
-      df-messenger {
-        z-index: 999;
-        position: fixed;
-        bottom: 16px;
-        right: 16px;
-      }
-    </style>
-    <title>Fruit Image Description</title>
-</head>
-<body>
-    <div class="align-center">
-        <h1>Upload a Fruit Image</h1>
-        <form method="POST" enctype="multipart/form-data" id="image-form">
-            <input type="file" name="image" id="image-input" onchange="previewImage()" class="form-control">
-            <button class="btn btn-secondary mt-3">Describe</button>
-        </form>
-        <div class="row">
-            <div class="column">
-                <div class="image-holder">
-                    <img id="preview-image" alt="Uploaded Image" style="display: none;" src="">
-                </div>
-            </div>
-            <div class="column">
-                <div class="image-holder">
-                    <img id ="loading-icon" src="{{ url_for("static",filename="images/loading.gif") }}" style="display: none;" alt="Loading...">
-                </div>
-                {% if error %}
-                    <p style="color: red;">{{ error }}</p>
-                {% endif %}
-        {#        {% if response %}#}
-        {#            <p id="details">{{ response }}</p>#}
-        {#        {% endif %}#}
-                <p id="resp"></p>
-            </div>
-        </div>
+{% extends "base.html" %}
+{% block content %}
+    <div class="main-card main-card-home-page">
+        <h1 class="align-center">Gemini AI App Development - MVP</h1>
+        <p><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif">There are few methods to develop apps using Gemini AI. I will be able to use four methods and python language to build usable apps.</span></span></p>
+        <ul>
+            <li><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif"><strong>Freeform prompt apps.</strong></span></span></li>
+        </ul>
+
+        <p><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif">This kind of app can send a simple prompt with or without image to the Gemini ai and get an answer. As an example, we can send an image to Gemini and ask for a description about it.</span></span></p>
+
+        <p><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif">You can check the &quot;Fruit&quot; page of this website to get an idea about this kind of app. There, you can upload an image of a fruit to get the name and a small description about it. If you uploaded an image that has more than one fruit or no fruit on it, you would get an error message.</span></span></p>
+
+        <ul>
+            <li><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif"><strong>Structured prompt apps.</strong></span></span></li>
+        </ul>
+
+        <p><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif">You can train the ai to follow a pattern using this kind of app. As an example, we can give few product names and descriptions about them to train the style we used to write product descriptions. Then when we give a new product name, it will generate a description that follows the pattern we used.</span></span></p>
+
+        <p><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif">You can check the &quot;Poem&quot; page of this website to get an idea about this kind of app. It will generate a poem when you give a topic.</span></span></p>
+
+        <ul>
+            <li><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif"><strong>Chat prompt apps.</strong></span></span></li>
+        </ul>
+
+        <p><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif">Using this kind of app, we can have a conversation with Gemini. During the setup, we can assign a role and characters to the app and then it follows them when you are chatting with it.</span></span></p>
+
+        <p><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif">You can check the &quot;Chat&quot; page of this website to get an idea about this kind of app. I assigned a &quot;Train Lover&quot; role to it. So, AI will reply to you about any questions about trains. It will remind you he is an expert at trains and does not know other stuff if you ask anything else.</span></span></p>
+
+        <ul>
+            <li><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif"><strong>Chat agent.</strong></span></span></li>
+        </ul>
+
+        <p><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif">Using this method, we can train a model with your data and the power of Gemini.</span></span></p>
+
+        <p><span style="font-size:11pt"><span style="font-family:Aptos,sans-serif">You can check the floating button with chat icon on any page to experience this. There I created a chatbot and a chat agent to provide details about this website and about the services I provide. You can chat with that bot and get an answer.</span></span></p>
+
     </div>
-
-    <script>
-        function previewImage() {
-            const imageInput = document.getElementById('image-input');
-            const previewImage = document.getElementById('preview-image');
-            const detail = document.getElementById("resp")
-
-            const file = imageInput.files[0];
-            const reader = new FileReader();
-
-            reader.onload = function(e) {
-                previewImage.src = e.target.result;
-                previewImage.style.display = 'block';
-                detail.innerText = "";
-            }
-
-            reader.readAsDataURL(file);
-        }
-        $(document).ready(function (){
-            $('#image-form').submit(function (event){
-                event.preventDefault();
-                const formData = new FormData(this);
-                $('#loading-icon').show();
-                $.ajax({
-                    type: "POST",
-                    url: "/process",
-                    data: formData,
-                    contentType: false,
-                    processData: false
-                }).done(function (response){
-                        var res = document.getElementById("resp")
-                        res.innerText=response;
-                }).fail(function (jqXHR, textStatus, errorThrown){
-                        console.log(errorThrown)
-                }).always(function (){
-                        $('#loading-icon').hide();
-                });
-            });
-        });
-    </script>
-</body>
-</html>
+{% endblock %}
