Added upwork and fiverr profile links

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,5 +34,8 @@
             {% block content %}
             {% endblock %}
         </div>
+        <div class="align-center">
+            <h3>You can hire me on <a href="https://www.upwork.com/freelancers/keashan" target="_blank">Upwork</a> or <a href="https://www.fiverr.com/keashan" target="_blank">Fiverr</a></h3>
+        </div>
     </body>
 </html>
